# tungshing

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEEP_OPTIMIZATION_REPORT.md  LICENSE  MANIFEST.in  Makefile  OPTIMIZATION_SUMMARY.md  PYPI_OPTIMIZATION_REPORT.md  README.md  SECURITY.md  TungShing.py  dev.py  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml
docs/: PERFORMANCE_GUIDE.md  STANDARD_COMPLIANCE.md
src/tungshing/: __init__.py  __main__.py  _version.py  advanced_cli.py  cache.py  core.py  dev_tools.py  memory_optimization.py  profiling.py  validation.py
tests/: test_boundaries.py  test_comprehensive.py  test_performance.py
