[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tungshing"
version = "0.1.1"
description = "严格口径的黄历/通胜（年柱立春、月柱按节、日柱晚子时）；兼容 cnlunar 用法 | Strict Chinese lunar calendar library with cnlunar-compatible API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Zhang Xianyu (张衔瑜) / Zhang Ziyang (张子阳)", email = "z_zz@u.nus.edu" }
]
maintainers = [
  { name = "Zhang Xianyu (张衔瑜) / Zhang Ziyang (张子阳)", email = "z_zz@u.nus.edu" }
]
requires-python = ">=3.9"
dependencies = [
  "cnlunar",
  "sxtwl",
  "tzdata; platform_system == 'Windows'"
]
keywords = [
  "huangli", 
  "tungshing", 
  "bazi", 
  "ganzhi", 
  "lunar", 
  "cnlunar", 
  "sxtwl",
  "chinese-calendar",
  "lunar-calendar",
  "astronomy",
  "traditional-chinese"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11", 
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: Chinese (Traditional)",
  "Natural Language :: English"
]

[project.urls]
Homepage = "https://github.com/xianyu564/tungshing"
Repository = "https://github.com/xianyu564/tungshing"
Issues = "https://github.com/xianyu564/tungshing/issues"
Documentation = "https://github.com/xianyu564/tungshing#readme"
Changelog = "https://github.com/xianyu564/tungshing/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/xianyu564"

[project.scripts]
tungshing = "tungshing.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "build>=1.0.0",
  "twine>=4.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/tungshing"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "docs/",
  ".github/workflows/",
  "README.md",
  "LICENSE",
  "TungShing.py",
  "pyproject.toml",
  "CONTRIBUTING.md",
  "CHANGELOG.md"
]

# Tool configurations
[tool.ruff]
target-version = "py39"
line-length = 88
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long, handled by formatter
]

[tool.ruff.isort]
known-first-party = ["tungshing"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

